Rework every section against the tools' current state
Verified each chapter against the source of the tool it describes and
rewrote what diverged: the repository section now documents only what
jenesis-repository ships, opening with a user-facing getting-started
(run from source, Spring Boot configuration, the open first run, proxying,
publishing, the console as a second process) and dropping the maintenance
chapter whose walk and GC have no trigger; the launcher section states
what the build tool writes into a launcher jar and treats the remaining
descriptor keys as launcher capabilities for hand-assembled jars; the
module-index section uses the URL shapes the live service accepts, names
the named-only routes, the best-effort redirect and the audit files; the
build-tool chapters fix staged paths, property names and defaults, add
Homebrew and Scoop, and explain how tests are written; jpx documents the
java build/jenesis/Jpx.java form and the Docker caveats.

Naming is now strict - "the Jenesis Module Index" for repo.jenesis.build,
"Jenesis Repository" only for the product, "the local module repository"
for ~/.jenesis, "jpx" in lower case, "launcher jar" for the artifact - and
the rules are recorded in README.md and AGENTS.md, together with the rule
to document only what ships today. British spelling throughout, shorter
sentences, and no tier or plan wording anywhere on the site.